--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 11</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div class="form-container">
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">Search</button>
+      </form>
+    </div>
+    <div class="gallery"></div>
+    <button type="button" class="load-more visually-hidden">Load more</button>
+
     <script type="module" src="./index.js"></script>
   </body>
 </html>
