--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 11</title>
+    <meta
+      name="description"
+      content="Your gateway to an endless world of visual content. Discover, explore, and share stunning images from millions of options."
+    />
+    <title>Search Images</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -15,11 +19,13 @@
           autocomplete="off"
           placeholder="Search images..."
         />
-        <button type="submit">Search</button>
+        <button type="submit" class="btn">Search</button>
       </form>
     </div>
     <div class="gallery"></div>
-    <button type="button" class="load-more visually-hidden">Load more</button>
+    <button type="button" class="load-more visually-hidden btn">
+      Load more
+    </button>
 
     <script type="module" src="./index.js"></script>
   </body>
